--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,6 +31,10 @@
     "defaultMessage": "FAQ",
     "description": "FAQ Button Text"
   },
+  "/x0h9E": {
+    "defaultMessage": "Login with Phone",
+    "description": "login with phone tab"
+  },
   "0JV99f": {
     "defaultMessage": "This is index page",
     "description": "Page description"
@@ -42,6 +46,10 @@
   "13ETG6": {
     "defaultMessage": "Help",
     "description": "more menu button"
+  },
+  "1FjMUC": {
+    "defaultMessage": "Forgot Password?",
+    "description": "forgot password link"
   },
   "1RUvaS": {
     "defaultMessage": "Profile Settings",
@@ -58,6 +66,10 @@
   "2W0f9h": {
     "defaultMessage": "Bio"
   },
+  "2bMdhC": {
+    "defaultMessage": "Create a New Account",
+    "description": "create a new account button"
+  },
   "2qExk8": {
     "defaultMessage": "Get the rare collectibles with your coins now",
     "description": "More card Title"
@@ -65,6 +77,14 @@
   "2ua1yZ": {
     "defaultMessage": "rank",
     "description": "rank"
+  },
+  "2yf2WH": {
+    "defaultMessage": "Login with Phone",
+    "description": "Login with Phone tab"
+  },
+  "3Wcqsy": {
+    "defaultMessage": "Next",
+    "description": "Next button"
   },
   "3lLFC/": {
     "defaultMessage": "{label}",
@@ -89,6 +109,10 @@
   "6Cjk2D": {
     "defaultMessage": "Login",
     "description": "Login Button"
+  },
+  "6FPmdk": {
+    "defaultMessage": "Filter",
+    "description": "Filter button"
   },
   "6NWftj": {
     "defaultMessage": "Challenges",
@@ -170,9 +194,9 @@
     "defaultMessage": "hackerkid logo",
     "description": "logo"
   },
-  "E+cQHz": {
-    "defaultMessage": "Unlock Now",
-    "description": "more card button"
+  "DuPnGd": {
+    "defaultMessage": "Email",
+    "description": "Email label"
   },
   "EG430K": {
     "defaultMessage": "Go to More",
@@ -194,6 +218,26 @@
     "defaultMessage": "This is Video page",
     "description": "More options Page"
   },
+  "FhTUgw": {
+    "defaultMessage": "Not {phone} ?",
+    "description": "not button"
+  },
+  "G0AqB8": {
+    "defaultMessage": "Login into Existing Account",
+    "description": "Login into Exisiting Account button"
+  },
+  "GQwBTI": {
+    "defaultMessage": "Verify OTP and proceed",
+    "description": "verify otp button"
+  },
+  "Gon8SN": {
+    "defaultMessage": "Login with Email",
+    "description": "Login with email tab"
+  },
+  "H2rvzb": {
+    "defaultMessage": "Password changed successfully",
+    "description": "Password changed text"
+  },
   "HAlOn1": {
     "defaultMessage": "Name"
   },
@@ -209,20 +253,21 @@
     "defaultMessage": "Call",
     "description": "Call Button Title"
   },
+  "IV0q/o": {
+    "defaultMessage": "Help",
+    "description": "Help modal title"
+  },
   "Ib1cTy": {
     "defaultMessage": "9876543221",
     "description": "Call Button Text"
   },
-  "JCIgkj": {
-    "defaultMessage": "Username"
+  "In3suu": {
+    "defaultMessage": "{errorMessage}",
+    "description": "error text"
   },
-  "K+0Pvy": {
-    "defaultMessage": "Certificates",
-    "description": "collection header"
-  },
-  "LkuPrA": {
-    "defaultMessage": "Join your friends in the club",
-    "description": "more card subtitle"
+  "JnwRMJ": {
+    "defaultMessage": "OTP",
+    "description": "OTP label"
   },
   "MB8h2I": {
     "defaultMessage": "Leaderboard Ranking",
@@ -239,6 +284,10 @@
   "NZqKYF": {
     "defaultMessage": "Forgot Password?",
     "description": "Forgot password link"
+  },
+  "Nn5oAD": {
+    "defaultMessage": "Go to login",
+    "description": "Go to login button"
   },
   "O1sXEv": {
     "defaultMessage": "Collections",
@@ -316,9 +365,29 @@
     "defaultMessage": "Edit",
     "description": "edit profile"
   },
+  "VdAhqD": {
+    "defaultMessage": "Coming Soon",
+    "description": "collectibles header"
+  },
+  "VsWMVt": {
+    "defaultMessage": "Re-type password",
+    "description": "Re-type password label"
+  },
   "VsYaEG": {
     "defaultMessage": "Open chat now",
     "description": "Chat Button Text"
+  },
+  "VthZQE": {
+    "defaultMessage": "Create a New Account",
+    "description": "Create Account Heading"
+  },
+  "W5zEev": {
+    "defaultMessage": "Resend",
+    "description": "resend otp button"
+  },
+  "X1rCRf": {
+    "defaultMessage": "Login into existing account",
+    "description": "login into existing account button"
   },
   "Y+dh5z": {
     "defaultMessage": "Edit Profile",
@@ -375,12 +444,9 @@
     "defaultMessage": "Show Leaderboard",
     "description": "show leaderboard"
   },
-  "feq+Va": {
-    "defaultMessage": "More friends = More fun",
-    "description": "more card title"
-  },
-  "flaX9K": {
-    "defaultMessage": "Create a New Account"
+  "fOZCSk": {
+    "defaultMessage": "Set a Password",
+    "description": "Set password label"
   },
   "g0zp7w": {
     "defaultMessage": "Continue Playing",
@@ -402,13 +468,25 @@
     "defaultMessage": "store authtoken",
     "description": "authtoken temp storage btn"
   },
-  "iS2zLU": {
-    "defaultMessage": "Visit Club",
+  "hEqp4d": {
+    "defaultMessage": "Coming Soon...",
     "description": "more card button"
   },
-  "km5SOz": {
-    "defaultMessage": "View all collections",
-    "description": "modal collection button"
+  "hJpqIn": {
+    "defaultMessage": "Send OTP",
+    "description": "send otp button"
+  },
+  "hphOHh": {
+    "defaultMessage": "Help",
+    "description": "help button"
+  },
+  "hxLhGK": {
+    "defaultMessage": "Set Password",
+    "description": "Password Label"
+  },
+  "jZhy7I": {
+    "defaultMessage": "Forgot Password",
+    "description": "Forgot Password Heading"
   },
   "lKeCea": {
     "defaultMessage": "Save & Exit",
@@ -446,9 +524,9 @@
     "defaultMessage": "Get the rare collectibles with your coins now",
     "description": "more card title"
   },
-  "nTxUJZ": {
-    "defaultMessage": "Try IDE Now",
-    "description": "more card button"
+  "nT6Ql7": {
+    "defaultMessage": "{text}",
+    "description": "help type text"
   },
   "nlYt8p": {
     "defaultMessage": "View more",
@@ -520,6 +598,10 @@
   "wrdAU0": {
     "defaultMessage": "Help",
     "description": "Help CTA"
+  },
+  "x8lXTv": {
+    "defaultMessage": "Resend",
+    "description": "Resend otp button text"
   },
   "xT1NKB": {
     "defaultMessage": "Games",
