CU-2np2jg5 fix bug: navigation error, undo project gradle version

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -218,6 +218,10 @@
     "defaultMessage": "Not {phone} ?",
     "description": "not button"
   },
+  "FoTGQE": {
+    "defaultMessage": "Go to Login",
+    "description": "Go to login button"
+  },
   "G0AqB8": {
     "defaultMessage": "Login into Existing Account",
     "description": "Login into Exisiting Account button"
